47
================

24/02/23 Add event menu items (Roman+Saggi) #1234
24/02/23 Add Romanian locale
23/02/23 cron.animalcsv/personcsv should output str instead of bytes to stdout
23/02/23 Add $$DescriptionAttr$$ for HTML template meta tags (animalview)
19/02/23 Preview publishing template and online form should open in new tabs
18/02/23 Bug calculating vaccinated shelter animals by type on annual figures
17/02/23 Use reverse proxy for payment processor callbacks on sm.com
16/02/23 Use HTML links on lost/found match report #368
16/02/23 Add red/yellow/blue/green/purple coloured emblems
15/02/23 Template animals: option to calculate from DOB #93
15/02/23 Check permissions for delete buttons on incoming forms
14/02/23 Delete additional field values after merging animal/person
11/02/23 Substitute line breaks automatically in all word processor tokens
10/02/23 Add option for more 4 more payment mappings (and easy way to add more)
10/02/23 Copy the fee when creating a new due payment
09/02/23 Retry failed S3 PUT upto 5 times with increasing intervals
08/02/23 Add lksoutcome for outcome fields in v_animal and report/querybuilder
08/02/23 Include medical info in clinic documents
07/02/23 Suggest current vet email address when emailing from media
07/02/23 Truncate long payment comments when creating transactions
03/02/23 Batch processes to update breed names #1226
03/02/23 Suppress redundant flag change log when creating new person
01/02/23 Fix to additional field merge so that target doesn't need to exist first

46
================

30/01/23 onlineform: breed/species/colour lookups should have blank option
29/01/23 When merging people and animals, copy/merge the additional field values
28/01/23 Option to never anonymise adopters #1218
23/01/23 Add animal events slider (Saggi Neuemann) #1221
23/01/23 FTP TLS support for found/24pet 
23/01/23 Event configuration options (Roman+Saggi) #1220
23/01/23 Event page (Roman+Saggi) #1217