@@ -724,7 +724,7 @@ def email_daily_reports(dbo, now = None):
         # If we aren't sending empty reports and there's no data, bail
         if body.find("NODATA") != -1 and not asm3.configuration.email_empty_reports(dbo): 
             continue
-        asm3.utils.send_email(dbo, "", emails, "", "", r.TITLE, body, "html", exceptions=False)
+        asm3.utils.send_email(dbo, "", emails, "", "", r.TITLE, body, "html", exceptions=False, retries=3)
 
 def execute_title(dbo, title, username = "system", params = None, toolbar = True):
     """
